src/template.css
:root {
  --bg-base: hsl(224 100% 85%);
  --bg-mantle: hsl(0 0% 98%);
  --bg-crust: hsl(0 0% 85%);
  --shadow: hsl(0 0% 5%);
  --titles: hsl(224 100% 70%);
  --text: hsl(0 0% 25%);
  --text-muted: hsl(0 0% 99%);
  --primary: hsl(47 97% 80%);
  --secondary: hsl(350 66% 70%);
  --danger: hsl(0 75% 60%);
  --warning: hsl(23 100% 63%);
  --success: hsl(98 42% 32%);
}

/* 
EB Garamond: 400-800
Fira Sans: 100-900
Permanent Marker: 400
*/

* {
  margin: 0px;
  padding: 0px; 
  border: 0px;
  font-size: 100%;
  font-family: "Fira Sans", sans-serif;
  font-weight: 400;
  font-style: normal;
  box-sizing: border-box;
  color: inherit;
  background-color: inherit;
}

body {
  background-color: var(--bg-mantle);
  font-size: 18px;
  line-height: 1.5;
  overflow-wrap: break-word;
  text-wrap: pretty;
  color: var(--text);
  display: flex;
  flex-direction: column;
  border: 12px solid var(--bg-base);
}

h1 {
  color: var(--titles);
  text-align: center;
  font-family: "EB Garamond", serif;
  font-size: 52px;
  font-weight: 400;
  margin: 1em 0;
}

#title img {
  height: 4em;
  width: auto;
  margin: 0 1em;
}

header {
  margin-bottom: 4em;
}

nav {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  gap: 1em;
  margin: 0 1em;
  border-top: 2px solid var(--primary);
  border-bottom: 2px solid var(--primary);
}

button {
  color: var(--titles);
  font-family: "EB Garamond", serif;
  font-variant: small-caps;
  font-size: 26px;
  font-weight: 500;
  padding: 8px 32px;
}

button:hover {
  color: var(--secondary);
}

#content {
  min-height: 90vh;
  display: flex;
  flex-direction: column;
}

.flex-centered {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.flex-h-centered-row {
  display: flex;
  justify-content: center;
}

.flex-v-centered-row {
  display: flex;
  align-items: center;
  justify-content: center;
}

.icon {
  height: 2.25em;
  width: auto;
  margin: 4px 1em;
}

footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: var(--bg-base);
  font-size: 14px;
  text-align: center;
  padding: 0 24px;
  margin-top: 64px;
}

#big-logo {
  margin: 64px;
  width: 25vw;
  height: auto;
  align-self: center;
  border: 4px solid var(--primary);
  box-shadow: 0px 0px 18px var(--shadow);
  border-radius: 100%;
  background-color: var(--bg-crust);
}

#back-matter {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 12px;
}

#license,
#credit,
#socials {
  grid-row: 1;
}

#license {
  grid-column: 1;
}

#credit {
  grid-column: 2;
}

#socials {
  grid-column: 3;
}

@media screen and (max-width: 500px) {
  footer {
    grid-template-columns: 1fr;
  }
  #license,
  #credit,
  #socials {
    grid-column: 1;
  }
  #credit {
    grid-row: 1;
  }
  #socials {
    grid-row: 2;
  }
  #license {
    grid-row: 3;
  }
}

